# true-case-path.py

./: README.md  setup.cfg
tests/true-case-path/examples/: test.py
