# https://pypi.org/project/setupcfg-generator/
[metadata]
name = true-case-path
version = 2019.4.17
url = https://github.com/looking-for-a-job/true-case-path.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = case path

[options]
install_requires = 
	public
	setuptools
packages = 
	true_case_path
